[package]
name = "rustedfall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustedfall"
path = "src/lib.rs"

[[bin]]
name = "rustedfall"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde = { version = "1.0.166", features = ["derive"] }
serde_json = { version = "1.0.108" }
